# nupic.research.core

./: CMakeLists.txt  CommonCompilerConfig.cmake  README.md
bindings/py/: requirements.txt  setup.py
bindings/py/nupic/bindings/: check.py
bindings/py/nupic/bindings/algorithms/: __init__.py  apical_tiebreak_temporal_memory.py  spatial_pooler.py
bindings/py/nupic/bindings/math/: __init__.py  nupic_random.py  segment_matrix_adapter.py  segment_sparse_matrix.py  sparse_binary_matrix.py  sparse_matrix.py  sparse_matrix_connections.py
bindings/py/nupic/bindings/regions/: TestNode.py
bindings/py/nupic/bindings/tools/: cyclical_serialization_perf.py  random_serialization_perf.py
bindings/py/src/: PyApicalTiebreakTemporalMemory.cpp  PyApicalTiebreakTemporalMemory.hpp  PyConnections.cpp  PyConnections.hpp  PyRandom.cpp  PyRandom.hpp  PySegmentSparseMatrix.hpp  PySparseBinaryMatrix.cpp  PySparseBinaryMatrix.hpp  PySparseMatrix.cpp  PySparseMatrix.hpp  PySparseMatrixConnections.cpp  PySparseMatrixConnections.hpp  PySpatialPooler.hpp  math_module.cpp  nupic_module.cpp  nupic_module.hpp
bindings/py/src/module/: algorithms.hpp  math.hpp
bindings/py/src/support/: NumpyArrayObject.cpp  PyCapnp.hpp  pybind_helpers.hpp
bindings/py/tests/: nupic_random_test.py  sparse_binary_matrix_test.py  sparse_matrix_test.py
bindings/py/tests/algorithms/: cells4_test.py  svm_test.py
conda/: build.sh  conda_build_config.yaml  meta.yaml
docs/source/: conf.py
examples/bindings/: sparse_matrix_how_to.py
githooks/: README.md
src/: CMakeLists.txt  NupicLibraryUtils.cmake
src/examples/algorithms/: README.md
src/nupic/: Version.hpp.in
src/nupic/algorithms/: ApicalTiebreakTemporalMemory.cpp  ApicalTiebreakTemporalMemory.hpp  Cells4.cpp  SvmT.hpp
src/nupic/experimental/: ExtendedTemporalMemory.cpp
src/nupic/math/: ArrayAlgo.hpp  Math.hpp  SparseBinaryMatrix.hpp  SparseMatrix.hpp  Utils.hpp
src/nupic/regions/: PyRegion.cpp
src/nupic/types/: Types.h  Types.hpp
src/nupic/utils/: GroupBy.hpp  TRandom.cpp
src/test/integration/: ConnectionsPerformanceTest.cpp  PyRegionTest.cpp
src/test/unit/: UnitTestMain.cpp
src/test/unit/algorithms/: ApicalTiebreakTemporalMemoryTest.cpp
src/test/unit/experimental/: ExtendedTemporalMemoryTest.cpp
src/test/unit/ntypes/: ArrayTest.cpp
src/test/unit/os/: TimerTest.cpp
src/test/unit/utils/: RandomTest.cpp
